# simplejwt_multisessions

./: .gitignore  LICENSE  MANIFEST.IN  README.rst  setup.cfg
simplejwt_multisessions/: admin.py  apps.py  models.py  tasks.py  tests.py
simplejwt_multisessions/api/: serializers.py  views.py
simplejwt_multisessions/migrations/: 0001_initial.py
