[metadata]
name = simplejwt_multisessions
version = 1.4
description = A Django app that allows you to generate SIMPLE_JWT with two different lifetimes plus more options.
long_description = file: README.rst
url = https://github.com/benyaamin/simplejwt_multisessions
author = Benyamin Agha Ebrahimi
author_email = Benyamin.eb@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8.5
install_requires =
    Django >= 3.2  
    djangorestframework-simplejwt >= 5.0